testdata/fixtures/review/positive/debug_breakpoint_py.py
def compute(a, b):
    breakpoint()
    return a + b
