testdata/fixtures/review/negative/todo_clean_py.py
def add(a, b):
    # simple addition helper
    return a + b
